--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+Changes in version 2.0-5
+  o Fixed bug with displacePart() function
 Changes in version 2.0-4
   o Added citation info 
   o Fixed small bugs with particle simulations  
